--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -23,4 +24,4 @@ jobs:
       
       - name: docker image push
         run: docker push $IMAGE_NAME:${GITHUB_SHA::7}
-        
+
