--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -24,4 +25,20 @@ jobs:
       
       - name: docker image push
         run: docker push $IMAGE_NAME:${GITHUB_SHA::7}
+
+  change_tag:
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: change tag
+        run: sed -i "s/samet-task:.*/samet-task:${GITHUB_SHA::7}/g" ./manifests/deployment.yaml
+
+      - uses: EndBug/add-and-commit@v9 # You can change this to use a specific version.
+        with:
+          # The arguments for the `git add` command (see the paragraph below for more info)
+          # Default: '.'
+          add: './manifests'
+      
 
